@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.82 2018/07/04 13:40:23 jperkin Exp $
+# $NetBSD: Makefile,v 1.83 2019/03/25 01:52:02 jklos Exp $
 
-DISTNAME=	mailman-2.1.25
-PKGNAME=	mailman-2.1.25
+DISTNAME=	mailman-2.1.29
+PKGNAME=	mailman-2.1.29
 CATEGORIES=	mail www
-MASTER_SITES=	http://launchpad.net/mailman/2.1/2.1.25/+download/
+MASTER_SITES=	https://launchpad.net/mailman/2.1/2.1.29/+download/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
