@@ -1,9 +1,9 @@
-$NetBSD: distinfo,v 1.25 2017/12/04 01:52:58 maya Exp $
+$NetBSD: distinfo,v 1.26 2019/03/25 01:52:02 jklos Exp $
 
-SHA1 (mailman-2.1.25.tgz) = 1bef8b006c6beccbbc4c8c16d0c3290f64765c94
-RMD160 (mailman-2.1.25.tgz) = c65a218d3eb995a14612a2da395426c100f96a33
-SHA512 (mailman-2.1.25.tgz) = 739c5f947a9c510b8515ee77bd37431c56bcdd60775e672ee7a513fa3bc6ed5da223ea2ffd306dc7105fa5b322fe774ba8d14b285a6017fa6dcad7880b0b1281
-Size (mailman-2.1.25.tgz) = 9254776 bytes
+SHA1 (mailman-2.1.29.tgz) = 40fe97974a6f0805a01d55c6944565f238778238
+RMD160 (mailman-2.1.29.tgz) = d3ea74a88214a81563a1b5f52166f7352136777d
+SHA512 (mailman-2.1.29.tgz) = ed25179a4580092629890664c5502908b20e326c2ed06ad4e597fb4e8de84076c369ecd7a272be5ed8a1cb4479413d0e004d87804de763ee850e4d04d9a83376
+Size (mailman-2.1.29.tgz) = 9376258 bytes
 SHA1 (patch-aa) = 9684b1caeb52f31ee6967eae3f9a464de214879e
 SHA1 (patch-ab) = 39f6294e53110bd1fd09b1e90ab46820f4d48e3f
 SHA1 (patch-ad) = 665884b9dd1789e4abd430c762bdbfd707d48d30
